tests/NormalTests/paczka1/small_fuzzy/76444242.err
Error in line 2: USd3L A876 72,4
Error in line 7: eRrq6q A253 84,3
Error in line 8: 0BrSZWTRR A708 94,8
Error in line 11: 0BrSZWTRR A876 41,8
